@@ -4,9 +4,10 @@ LICENSE
 demo/notForCRANbenchmark.R
 demo/notForCRANbenchmark.cpp
 demo/oldRgenerator.R
-.travis.yml
+^\.travis\.yml$
 vignettes/.install_extras
 inst/code/ziggurat_code.zip
 inst/papers
 .*\.tar\.gz$
 ^local
+^\.github
